--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+archivesBaseName = 'app' 
 
 java {
 	sourceCompatibility = '17'
