--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,14 @@ on:
 permissions:
   contents: read
 
+env:
+  RMT_HOST: 62.252.239.190
+  RMT_USER: webadmin
+  RMT_PORT: 2226
+  APP_NAME: test-api
+  JAR_NAME: app.jar
+  APP_PORT: 9017
+
 jobs:
   build:
 
@@ -35,7 +43,7 @@ jobs:
         
     - name: Deploy
       run: |
-        ssh -o "StrictHostKeyChecking=no" -p 2226 webadmin@62.252.239.190 'mkdir -p test-api'
-        scp -o "StrictHostKeyChecking=no" -P 2226 build/libs/app.jar webadmin@62.252.239.190:test-api/app.jar
-        ssh -o "StrictHostKeyChecking=no" -p 2226 webadmin@62.252.239.190 'kill -9 $(lsof -t -i:9017)' || true
-        ssh -o "StrictHostKeyChecking=no" -p 2226 webadmin@62.252.239.190 'nohup jdk-17.0.7/bin/java -jar -Dserver.port=9017 test-api/app.jar >test-api/logs 2>/dev/null </dev/null &'
+        ssh -o "StrictHostKeyChecking=no" -p $RMT_PORT $RMT_USER@$RMT_HOST 'mkdir -p $APP_NAME'
+        scp -o "StrictHostKeyChecking=no" -P $RMT_PORT build/libs/$JAR_NAME $RMT_USER@$RMT_HOST:$APP_NAME/$JAR_NAME
+        ssh -o "StrictHostKeyChecking=no" -p $RMT_PORT $RMT_USER@$RMT_HOST 'kill -9 $(lsof -t -i:$APP_PORT)' || true
+        ssh -o "StrictHostKeyChecking=no" -p $RMT_PORT $RMT_USER@$RMT_HOST 'nohup jdk-17.0.7/bin/java -jar -Dserver.port=$APP_PORT $APP_NAME/JAR_NAME >$APP_NAME/logs 2>$APP_NAME/logs </dev/null &'
