--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ env:
   APP_PORT: 9017
 
 jobs:
-  build:
+  main:
 
     runs-on: ubuntu-latest
 
@@ -36,7 +36,7 @@ jobs:
     - name: Setup SSH
       uses: webfactory/ssh-agent@v0.8.0
       with:
-        ssh-private-key: ${{ secrets.ID_RSA }}
+        ssh-private-key: ${{ secrets.SSH_KEY }}
       
     - name: Build
       run: ./gradlew build
